    org.jsoup.safety.Safelist instead).

  * Improvement: when converting jsoup Documents to W3C Documents in W3CDom, preserve HTML valid attribute names if the
    input document is using the HTML syntax. (Previously, would always coerce using the more restrictive XML syntax.)
    <https://github.com/jhy/jsoup/pull/1648>

*** Release 1.14.3 [2021-Sep-30]
  * Improvement: added native XPath support in Element#selectXpath(String)
    <https://github.com/jhy/jsoup/pull/1629>

  * Improvement: added full support for the <template> tag to the HTML5 parser spec.
    <https://github.com/jhy/jsoup/issues/1634>

  * Improvement: added support in CharacterReader to track newlines, so that parse errors can be reported more
    intuitively.
    <https://github.com/jhy/jsoup/pull/1624>

  * Improvement: tracked parse errors now have more details, including the erroneous token, to help clarify the errors.

  * Improvement: speed and memory optimizations for the :has(subquery) selector.

  * Improvement: the :contains(text) and :containsOwn(text) selectors are now whitespace normalized, aligning to the
    document text that they are matching against.
    <https://github.com/jhy/jsoup/issues/876>

  * Improvement: in Element, speed optimized adopting all of an element's child nodes into a currently empty element.
    Improves the HTML adoption agency algorithm when adopting elements with many children.
    <https://github.com/jhy/jsoup/issues/1638>

  * Improvement: increased the parse speed when in RCData (e.g. <title>) and unescaped <tag> tokens are found, by
    memoizing the </title> scan and reducing GC.
    <https://github.com/jhy/jsoup/issues/1644>

  * Improvement: when parsing custom tags (in HTML or XML), added a flyweight cache on Tag.valueOf(name) to reduce
    memory overhead when many tags are repeated. Also tuned other areas of the parser when many very deeply stacked
    custom elements were present.
    <https://github.com/jhy/jsoup/issues/1646>
