@@ -682,6 +682,29 @@ public abstract class Evaluator {
     }
 
     /**
+     * Evaluator for matching Element (and its descendants) wholeText. Neither the input nor the element text is
+     * normalized. <code>:containsWholeText()</code>
+     * @since 1.15.1.
+     */
+    public static final class ContainsWholeText extends Evaluator {
+        private final String searchText;
+
+        public ContainsWholeText(String searchText) {
+            this.searchText = searchText;
+        }
+
+        @Override
+        public boolean matches(Element root, Element element) {
+            return element.wholeText().contains(searchText);
+        }
+
+        @Override
+        public String toString() {
+            return String.format(":containsWholeText(%s)", searchText);
+        }
+    }
+
+    /**
      * Evaluator for matching Element (and its descendants) data
      */
     public static final class ContainsData extends Evaluator {
